@@ -371,11 +371,12 @@ CREATE TABLE `users` (
   `role` text CHARACTER SET utf8,
   `real_name` varchar(128) CHARACTER SET utf8 DEFAULT NULL,
   `email` varchar(64) CHARACTER SET utf8 DEFAULT NULL,
-  `perm_customers` INT(1)  NOT NULL  DEFAULT '1',
   `pdns` SET('Yes','No')  NULL  DEFAULT 'No' ,
   `editVlan` SET('Yes','No')  NULL  DEFAULT 'No',
   `editCircuits` SET('Yes','No')  NULL  DEFAULT 'No',
   `perm_pstn` INT(1)  NOT NULL  DEFAULT '1',
+  `perm_racks` INT(1)  NOT NULL  DEFAULT '1',
+  `perm_customers` INT(1)  NOT NULL  DEFAULT '1',
   `domainUser` binary(1) DEFAULT '0',
   `widgets` VARCHAR(1024)  NULL  DEFAULT 'statistics;favourite_subnets;changelog;top10_hosts_v4',
   `lang` INT(11) UNSIGNED  NULL  DEFAULT '9',
@@ -947,4 +948,4 @@ CREATE TABLE `php_sessions` (
 # ------------------------------------------------------------
 
 UPDATE `settings` SET `version` = "1.4";
-UPDATE `settings` SET `dbversion` = 8;
+UPDATE `settings` SET `dbversion` = 9;
